Fixed some bugs, ran some tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+Old_Summarization_Files/ROUGE/ROUGE-EVAL/DUC-2007/docs/*/*
 Old_Summarization_Files/ROUGE/ROUGE-EVAL/
 Old_Summarization_Files/wikipedia/
 *.pyc
