Beginning streaming stuff

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ stop_word_creater.py
 *.txt
 scala_tutorial_stuff/Spark_Scala/project/
 scala_tutorial_stuff/Spark_Scala/target/
+scala_tutorial_stuff/Streaming_stuff/project/
+scala_tutorial_stuff/Streaming_stuff/target/
