Sentences are now being vectorized, also a null pointer exception has been fixed

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ scala_tutorial_stuff/Spark_Scala/project/
 scala_tutorial_stuff/Spark_Scala/target/
 scala_tutorial_stuff/Streaming_stuff/project/
 scala_tutorial_stuff/Streaming_stuff/target/
+scala_tutorial_stuff/Streaming_stuff/Streaming_logs
